Config / Remove default author line

--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ theme: jekyll-theme-hacker
 markdown: kramdown
 baseurl: '/tryhackme-log' # because this is a project site
 url: 'https://vanessa-ayer.github.io'
-author: 'Vanessa Ayer'
+show_excerpts: false
+author: ''
