update all / cleanup

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ show_excerpts: false
 author: ''
 # TryHackMe metadata (edit these as you progress)
 thm:
-  rank: 'Script Kiddie' # your current rank text
-  rooms completed: 12 # your current completed rooms
-  next_rank: 'Hacker' # what you’re aiming for
-  progress_pct: 35 # % toward the next rank (0–100)
+  rank: 'Pathfinder' # your current rank
+  points: 650 # total points
+  next_rank: 'Seeker' # next rank label
+  progress_pct: 35 # 0–100 progress to the next rank
 
